# tkinterhw

./: README.md  pyproject.toml  requirements.txt
tkinterhw/: main.py
